RESOLVED FIXED59387
Fix OwnPtr strictness issues in WebCore/inspector/
https://bugs.webkit.org/show_bug.cgi?id=59387
Summary Fix OwnPtr strictness issues in WebCore/inspector/
James Robinson
Reported 2011-04-25 16:20:14 PDT
Fix OwnPtr strictness issues in WebCore/inspector/
Attachments
Patch (5.03 KB, patch)
2011-04-25 16:20 PDT, James Robinson
abarth: review+
James Robinson
Comment 1 2011-04-25 16:20:58 PDT
James Robinson
Comment 2 2011-04-25 16:30:30 PDT
WebKit Review Bot
Comment 3 2011-04-25 16:41:35 PDT
http://trac.webkit.org/changeset/84833 might have broken Chromium Linux Release
Note You need to log in before you can comment on or make changes to this bug.