2011-04-25  James Robinson  <jamesr@chromium.org>

Reviewed by Adam Barth.

        Fix OwnPtr strictness issues in WebCore/inspector/
        https://bugs.webkit.org/show_bug.cgi?id=59387

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::InspectorAgent):
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::InspectorController):
        * inspector/InspectorStyleSheet.cpp:
        (WebCore::InspectorStyleSheet::ensureSourceData):

Canonical link: https://commits.webkit.org/74560@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84833 268f45cc-cd09-0410-ab3c-d52691b4dbfc