Source/WebCore/inspector/InspectorController.cpp
@@ -58,7 +58,7 @@ namespace WebCore {
 
 InspectorController::InspectorController(Page* page, InspectorClient* inspectorClient)
     : m_injectedScriptManager(InjectedScriptManager::createForPage())
-    , m_inspectorAgent(new InspectorAgent(page, inspectorClient, m_injectedScriptManager.get()))
+    , m_inspectorAgent(adoptPtr(new InspectorAgent(page, inspectorClient, m_injectedScriptManager.get())))
     , m_inspectorClient(inspectorClient)
     , m_openingFrontend(false)
     , m_startUserInitiatedDebuggingWhenFrontedIsConnected(false)
